[package]
name = "google-authenticator-export"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
image = { version = "0.25.4", default-features = false, features = ["default-formats"] }
prost = "0.13.3"
quircs = "0.10.2"
thiserror = "1.0.65"

[build-dependencies]
prost-build = "0.13.3"

[profile.release]
strip = true
lto = true
