[package]
name = "google-authenticator-export"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
data-encoding = "2.6.0"
image = { version = "0.25.4", default-features = false, features = ["default-formats"] }
prost = "0.13.3"
quircs = "0.10.2"
serde = "1.0.213"
serde_json = "1.0.132"
thiserror = "1.0.65"
urlencoding = "2.1.3"

[build-dependencies]
prost-build = "0.13.3"

[profile.release]
strip = true
# lto = true
